# Dj_Project_Template

./: .env.dev  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tailwind.config.js
.github/workflows/: test.yaml
config/: settings.py
src/accounts/: managers.py  models.py  tests.py
src/accounts/migrations/: 0001_initial.py
src/templates/: base.html
tests/: base.py
tests/examples/: test_example.py
tests_functional/: base.py
tests_functional/examples/: test_example.py
