[tool.poetry]
name = "dj-project-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.1.6"
environs = { extras = ["django"], version = "^9.5.0" }
model-bakery = "^1.10.1"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
django-stubs = "^1.16.0"
pytest-playwright = "^0.3.2"
playwright = "^1.40.0"
pyright = "^1.1.337"
django-types = "^0.19.1"
django-stubs-ext = "^4.2.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
